# UGV_IGVC_2023

./: README.md
src/ugv_bot/: CMakeLists.txt  LICENSE.txt  README.md  package.xml  setup.py
src/ugv_bot/Road-Lane-Instance-Segmentation-PyTorch/: ros_lane_detect.py
src/ugv_bot/Scripts/: calibration.py  control_omega.py  egg.py  lane_costmap_layer.cpp  lane_wpx.py  lane_wpx_wrapper.sh  mark1.py  mark2.py  merge_scans.py  motor_client.py  motor_client_2.py  motor_server.py  send_goal.py  webcam_publisher.py  zed_transform.py  zed_transform2.py
src/ugv_bot/Scripts/Prototypes/: img_read_lane_pub.py  img_sub.py  img_sub_cropped_pub.py  img_sub_hough_pub.py  img_sub_lanes_pub.py  laser_pub.py  prespective_transform.py  yaw_increment.py
src/ugv_bot/Scripts/Services/: Lidar_occupancy_grid.py  imu_client.py  imu_server.py  lidar_server.py
src/ugv_bot/Scripts/Simple_image_service/: simple_image_client.py  simple_image_server.py
src/ugv_bot/Scripts/Utilities/: cart_to_polar.py  get_pixel_cord.py  linear_regg.py  teleop_keyboard.py
src/ugv_bot/Scripts/lanes_to_rviz/: camera_img_client.py  camera_img_server.py  lanes_pub_using_srv.py  readme.md
src/ugv_bot/Scripts/pose_covariance/: README.md  pose_covariance_marker.py
src/ugv_bot/launch/: empty_world.launch  final.launch  lane_wpx.launch  lidar_transform.launch  readme.md  scan_merge.launch  ugvbot_gmapping.launch  ugvbot_hectormapping.launch  ugvbot_movebase.launch  ugvbot_world.launch
src/ugv_bot/launch/config/: costmap_common.yaml  costmap_exploration.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  costmap_params.yaml  planner.yaml
src/ugv_bot/rviz_config/: depth.rviz  ellipse_marker.rviz  final.rviz  lanes_publisher.rviz  movebase.rviz  mybot.rviz  mybot1.rviz  zed.rviz
src/ugv_bot/srv/: SendImage.srv  SendImu.srv  SendMag.srv  SendTwist.srv
src/ugv_bot/ugvbot_control/config/: ugvbot_control.yaml
src/ugv_bot/ugvbot_control/launch/: ugvbot_control.launch
src/ugv_bot/ugvbot_description/: Minotaur_model.xacro  mybot.gazebo
src/ugv_bot/ugvbot_description/urdf/: extras.xacro  macros.xacro  materials.xacro  simple.xacro  ugvbot.gazebo  (+2 more)
src/ugv_bot/ugvbot_transform/: depth_to_laser.launch  transform.launch
src/ugv_bot/worlds/: empty.world  igvc_cam_calib.world  movebase_testing.world
(+18 files in other folders)
